--- a/praesentation.css
+++ b/praesentation.css
@@ -113,6 +113,27 @@ body {
 }
 
 
+.signature {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 120px 0 60px;
+}
+
+.sig-line {
+    width: 60%;
+    height: 1px;
+    background-color: #8C2848;
+    margin-bottom: 20px;
+}
+
+.sig-logo {
+    height: 150px;
+    width: auto;
+
+}
+
 
 
 
