--- a/praesentation.css
+++ b/praesentation.css
@@ -134,6 +134,17 @@ body {
 
 }
 
+.footer {
+    background-color: #000000;
+    color: #FDEEEF;
+    text-align: center;
+    padding: 40px 0;
+    font-family: "Roboto Flex", sans-serif;
+    font-weight: 200;
+    font-size: 18px;
+    margin-top: 120px;
+}
+
 
 
 
