--- a/praesentation.css
+++ b/praesentation.css
@@ -1,3 +1,5 @@
+/*FORSIDE*/
+
 * {
     /*nulstiller margin og padding på alle elementer*/
     margin: 0;
@@ -148,6 +150,8 @@ body {
     margin-top: 120px;
 }
 
+/*OM MIG SIDE*/
+
 /*margin og padding: margin - skubber boksen væk fra andre bokse. 
 padding - giver indholdet inde i boksen plads*/
 
@@ -224,9 +228,11 @@ padding - giver indholdet inde i boksen plads*/
     margin: 60px auto;
 }
 
+/*PROJEKT SIDE*/
+
 /*placering til overskrift projekt*/
 .Projekter {
-    padding: 40px 190px 0;
+    padding: 40px 120px 0;
 }
 
 /*Seneste projekter*/
@@ -260,7 +266,7 @@ padding - giver indholdet inde i boksen plads*/
     justify-content: space-between;  /* tekst til venstre - billede til højre*/
     align-items: flex-start; /*placere teksten i flex-startt*/
     padding: 120px 120px; /*luft alle sider*/
-    gap: 30px; /*astand mellem tekst og billedet*/
+    gap: 50px; /*astand mellem tekst og billedet*/
     flex-wrap: nowrap;
 }
 
@@ -333,4 +339,11 @@ padding - giver indholdet inde i boksen plads*/
     background-color: rgba(0, 0, 0, 0.6);
 }
 
+/*splitlinje mellem projekter*/
+.split-line2 {
+    width: 100%;
+    height: 1px;
+    background-color: #000000;
+    margin: 60px auto;
+}
 
