--- a/praesentation.css
+++ b/praesentation.css
@@ -118,6 +118,16 @@ body {
 
 }
 
+.designtext {
+    width: 100%;
+    text-align: center;
+    letter-spacing: 5px;
+    text-transform: uppercase;
+    font-size: 12px;
+    font-family: "Roboto Flex", sans-serif;
+    color: #461021;
+
+}
 
 .signature {
     width: 100%; /*sektion fylder hele bredden*/
@@ -213,6 +223,35 @@ padding - giver indholdet inde i boksen plads*/
     color: #000000;
 }
 
+
+.kompetencer, .kom-section {
+    font-family: "Cormorant Garamond", sans-serif;
+    padding: 0 120px 0;
+    font-size: 22px;
+    color: #000000;
+    margin-top: 0;
+    text-align: center;
+}
+
+.kom-tags{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    gap: 1rem;
+    padding: 40px 120px;
+}
+
+.kom-tags span {
+    background-color: #8C2848;
+    color: #fff;
+    padding: 0.6rem 1.4rem;
+    border-radius: 999px;
+    font-size: 0.85rem;
+    letter-spacing: 0.05em;
+    cursor: default;
+    text-align: center;
+}
+
 /*split linje mellem om mig og min baggrund*/
 .split-line {
     width: 100%;
@@ -220,6 +259,16 @@ padding - giver indholdet inde i boksen plads*/
     background-color: #8C2848;
     margin: 60px auto;
 }
+
+.split-line2 {
+    width: 100%;
+    height: 1px;
+    background-color: #8C2848;
+    margin: 0;
+    padding: 0;
+    display: block
+}
+
 
 
 
@@ -379,6 +428,19 @@ padding - giver indholdet inde i boksen plads*/
     transition: 0.2s;
 }
 
+.figma-knap {
+    display: inline-block;
+    padding: 12px 24px;
+    background-color: #6a1f39;
+    color: #fff;
+    text-decoration: none;
+    border-radius: 5px;
+    font-family: "Roboto Flex", sans-serif;
+    margin-top: 20px;
+    transition: 0.2s;
+    margin: 40px 120px;
+}
+
 .projekt-knap:hover {
     background-color: #6a1f39;
 }
@@ -423,6 +485,21 @@ padding - giver indholdet inde i boksen plads*/
     height: auto; /*bevarer img form*/
     object-fit: cover; /*fyld plads ud*/
     
+}
+
+.ToVopslag {
+    width: 100%; /*tilpas containers bredde*/
+    max-width: 350px; /*max str*/
+    height: auto; /*bevarer img form*/
+    display: block;
+    
+}
+
+.ToVopslagBox {
+    border: 4px solid #000000;
+    display: inline-block;
+    margin-top: 40px;
+    margin: 40px 120px 0;
 }
 
 
